[package]
name = "sleigh-ninja"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "x86_64"
path = "src/bin/x86_64.rs"

[[bin]]
name = "tricore"
path = "src/bin/tricore.rs"

[dependencies]
binaryninja = { path = "binaryninja-api/rust" }
sleigh-rs = { git = "https://github.com/rbran/sleigh-rs", features=["thread"] }
sleigh-eval = { git = "https://github.com/rbran/sleigh-eval" }
