[package]
name = "sleigh-ninja"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binaryninja = { path = "../binaryninja-api/rust" }
log = "*"
sleigh-eval = { path = "../sleigh-eval" }
# we don't need this directly, sleigh-eval exports this,
# we just need to force the thread feature
sleigh-rs = { path = "../sleigh-rs", features = ["thread"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
lto = true
debug = 1
